# burn-gpt2-from-scratch

./: Cargo.toml
src/: data_loader.rs  main.rs
